# agent-disco

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  calfkit-gate-support.md  data.json  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  skills-lock.json  threaded-private-chat-plan.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  installer.yml  release.yml
agents/: agent.template.md  codex_demo.md  conan.md  echo.md  echo.py  example.md.template  scribe.md
config/: agents.toml
docs/: README.md  a2a-threads.md  ambient-routing.md  architecture.md  authoring-agents.md  authoring-tools.md  bridge-settings.md  codex-auth.md  configuration.md  discord-setup.md  distributed-deployment.md  grok-auth.md  installation.md  mcp-tools.md  native-install.md  security.md  troubleshooting.md  using-calfcord.md  using-disco.md
docs/adr/: 0002-agent-side-mcp-selector-owned-by-calfcord.md  0004-send-caller-api-and-return-address.md  0006-remove-custom-dockerfile-generator.md  0014-roster-detached-off-process-compose.md  0015-broker-via-calfkit-mesh-wheel.md  0016-persistent-v2-step-messages.md  0016-runtime-builtin-discovery-and-mcp-field.md  0017-aggregated-step-messages-throttled-edits.md  0018-bound-message-history-json-bytes.md  0018-install-links-onto-an-already-searched-path-dir.md  0018-rich-tui-with-readchar-input.md  0019-rich-tui-with-readchar-input.md  0020-only-the-owning-agent-renders-to-the-humans-thread.md  0021-invite-grants-manage-channels-for-the-a2a-audit-channel.md  0022-supervisor-narration-is-the-callers-causes-are-never.md  0023-installs-own-and-pin-their-toolchain.md  0023-the-substrate-readiness-probes-stay-the-cost-was-import-hygiene.md  0024-step-trace-rows-are-values-rendered-at-flush.md  0025-seal-the-step-trace-from-the-streams-terminal.md  0026-the-a2a-thread-records-the-consulted-sub-tree.md  0027-a-nested-consult-is-announced-by-a-row-in-the-callers-trace.md  0028-mcp-field-discovers-all-servers-by-default.md  0029-a2a-turn-threads-use-explicit-consult-branches.md  0029-grok-oauth-provider-owns-its-device-code-flow.md
docs/design/: 2026-07-05-sticky-replies-plan.md  README.md  agent-memory-plan.md  aggregated-step-messages-plan.md  calfkit-0.5.4-lifecycle-adoption.md  calfkit-012-implementation-plan.md  calfkit-012-migration.md  (+17 more)
examples/: echo_bot.py  persona_demo.py  send_once.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_0eb9b53b7be7c797_definition_py.html  z_0eb9b53b7be7c797_factory_py.html  z_0eb9b53b7be7c797_gates_py.html  z_0eb9b53b7be7c797_identifier_py.html  z_0eb9b53b7be7c797_loader_py.html  z_0eb9b53b7be7c797_md_writer_py.html  z_0eb9b53b7be7c797_memory_py.html  z_0eb9b53b7be7c797_peer_roster_py.html  z_0eb9b53b7be7c797_phonebook_py.html  z_0eb9b53b7be7c797_routing_py.html  z_0eb9b53b7be7c797_runner_py.html  z_0eb9b53b7be7c797_state_py.html  z_0eb9b53b7be7c797_thinking_py.html  z_0eb9b53b7be7c797_tool_selectors_py.html  z_1848235224e371b6_keys_py.html  z_1848235224e371b6_line_input_py.html  z_1848235224e371b6_progress_py.html  z_1848235224e371b6_prompter_py.html  z_1848235224e371b6_render_py.html  z_1848235224e371b6_state_py.html  z_1848235224e371b6_theme_py.html  z_1848235224e371b6_widgets_py.html  z_1a1139215befaba9_check_py.html  z_1a1139215befaba9_heartbeat_py.html  z_1a1139215befaba9_refresher_py.html  z_2634791fe2b6c066_config_py.html  z_2634791fe2b6c066_definition_py.html  z_2634791fe2b6c066_fanout_py.html  z_2634791fe2b6c066_prompt_py.html  z_2634791fe2b6c066_roster_py.html  z_2634791fe2b6c066_runner_py.html  z_5fb7dbcfd7d0f979__agents_py.html  z_5fb7dbcfd7d0f979__editor_py.html  z_5fb7dbcfd7d0f979__envfile_py.html  z_5fb7dbcfd7d0f979__fields_py.html  z_5fb7dbcfd7d0f979__mcp_py.html  (+123 more)
roadmap/: onboarding-cli.md  scheduler.md  tansu-broker.md
scripts/: install.sh
tests/: test_install_sh.py  test_provisioning_wiring.py
(+404 files in other folders)
