[project]
name = "calfcord"
version = "0.1.0"
description = "Multi-agent organization on Discord."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "authlib>=1.7.2",
    "calfkit>=0.13.0",
    "calfkit-mesh>=0.1.2",
    "calfkit-tools>=0.1.4",
    "discord-py>=2.7.1",
    "httpx>=0.28.1",
    "openhands-sdk>=1.23.1",
    "prompt-toolkit>=3.0.52,<4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-frontmatter>=1.3.0,<2",
    "pyyaml>=6.0.3",
    "readchar>=4.2.2",
    "rich>=15.0.0",
    "uuid-utils>=0.16.0",
]

[project.scripts]
calfkit-bridge = "calfcord.bridge.gateway:main"
calfkit-agent = "calfcord.agents.runner:main"
calfkit-tools = "calfcord.tools.runner:main"
calfkit-mcp = "calfcord.mcp.runner:main"
calfkit-auth = "calfcord.providers.codex.cli:main"
calfcord-cli = "calfcord.cli.main:main"
calfcord-broker = "calfcord.broker.runner:main"

[tool.uv]
# Agent Disco runs on an interpreter it owns — never the box's. An active conda
# env or virtualenv otherwise rebinds the venv to that interpreter (its stdlib
# and base_prefix land outside the install), so removing or upgrading conda
# breaks the bridge and every agent, silently and days later. Declared here, so
# one statement governs the install, a contributor's `uv run`, and CI.
#
# `automatic` is already uv's default: it is restated to DEFEND it, because a
# user-level ~/.config/uv/uv.toml setting `never` would otherwise fail an install
# on exactly the Python-less box the installer promises to serve, and project
# config outranks user config. See docs/adr/0023.
python-preference = "only-managed"
python-downloads = "automatic"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calfcord"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that hit real external services (gated on env vars; not run in normal CI)",
]

[tool.coverage.run]
# ``relative_files`` is mandatory for python-coverage-comment-action.
# coverage.py records absolute file paths by default, but the action reads the
# .coverage file inside its own Docker container, whose workspace path differs
# from the runner's. Repo-relative paths are the only ones that resolve in both.
relative_files = true
source = ["src/calfcord"]
branch = true

[tool.coverage.report]
omit = ["*/__init__.py"]

[tool.mypy]
python_version = "3.12"
# SCOPED, deliberately. The repo has never been type-checked, so a repo-wide run
# would open with a wall of pre-existing errors and get switched off. This is an
# ALLOWLIST that grows one clean module at a time, and the job gates precisely
# because the scope stays clean — a red mark here is a real regression, never
# baseline noise. Add a module only once it passes `--strict` with nothing
# suppressed (`mypy --strict --ignore-missing-imports src/calfcord/bridge/<m>`).
#
# The seed modules `rely` on the check: `render_row`'s `assert_never` and
# `_is_pending`'s TypeGuard are load-bearing, and until this job existed they
# were decoration — a sixth `TraceRow` variant would have raised at render time
# and silently stopped the trace forever. `step_events` and `a2a_project` joined
# with #124: the A2A seal reads `step_events`' terminal seam, and `a2a_project`
# checks its `project_step`/`seal`/`finish` against `trace`'s real types.
files = [
    "src/calfcord/bridge/trace_rows.py",
    "src/calfcord/bridge/trace.py",
    "src/calfcord/bridge/step_events.py",
    "src/calfcord/bridge/a2a_project.py",
]
strict = true
# calfkit and discord.py ship no stubs; this scope must not turn that into noise.
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W", "SIM", "RUF"]
ignore = []

[dependency-groups]
dev = [
    "mypy>=1.18",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]
